<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterProdavac"
    android:orientation="vertical"
    android:background="@drawable/login">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_margin="50dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="720dp"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="30dp"
                android:text="@string/register_form_title"
                android:textAlignment="center"
                android:textSize="36sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Назив предузећа"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nazivRegistracija"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/korisnickoRegistracija2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sifraRegistracija2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form_ime"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/imeRegistracija2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form_prezime"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/prezimeRegistracija2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form_adresa"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/adresaRegistracija2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Имејл"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/imejlRegistracija"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <Button
                android:id="@+id/buttonRegistracija2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_form_register"
                android:textSize="15sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>