<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="30dp"
                android:text="@string/login_form_title"
                android:textAlignment="center"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/activity_main_usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/activity_main_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/activity_main_loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_form_login"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Немаш Налог? Региструј се"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:id="@+id/activity_main_registerButton"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="Као купац"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:id="@+id/registerProdavac2"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="Као продавац"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:id="@+id/searchButtonStart"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="search"
                android:textSize="15sp" />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/searchButtonStartKomentar"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="search-tekst komentara"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>