<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProfilActivity"
    android:orientation="vertical"
    android:background="@drawable/login">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_margin="50dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:orientation="vertical"
            android:padding="18dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="30dp"
                android:text="Измена информација"
                android:textAlignment="center"
                android:textSize="30sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form_ime"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/imeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form_prezime"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/prezimeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form_adresa"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/adresaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonProfilEdit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="Ажурирај"
                android:textSize="20sp" />





        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>